kubernetes/clusters/common/kube-system/cilium/network-policies/allow-egress-kubedns.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-kubedns
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/kubedns: allow
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: "TCP"
            - port: "53"
              protocol: "UDP"
