kubernetes/clusters/common/kube-system/cilium/network-policies/allow-egress-world.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-egress-world
spec:
  endpointSelector:
    matchLabels:
      egress.home.arpa/world: allow
  egress:
    - toEntities:
        - world
