kubernetes/clusters/common/kube-system/cilium/network-policies/allow-ingress-nginx.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-nginx
spec:
  description: "Allow pods that require ingress to allow traffic from ingress-nginx, no port restrictions"
  endpointSelector:
    matchLabels:
      ingress.home.arpa/nginx: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: ingress-nginx
            app.kubernetes.io/component: controller
      authentication:
        mode: required
