kubernetes/clusters/common/kube-system/cilium/network-policies/allow-ingress-prometheus.yaml
---
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-ingress-prometheus-to-all
spec:
  description: Allow Prometheus scraping
  endpointSelector:
    matchLabels:
      prom.home.arpa/prometheus: allow
  ingress:
    - fromEndpoints:
        - matchLabels:
            prometheus: kube-prometheus-stack
    - fromEndpoints:
        - matchLabels:
            prometheus: prom-main
